workspaces/diff-engine/src/learn_shape/snapshots/optic_diff_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_one_off_polymorphic_bodies__collections_results.snap
---
source: workspaces/diff-engine/src/learn_shape/result.rs
expression: "&collections_results"
---
(
    Some(
        "test-id-10",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-7",
                    base_shape_id: "$number",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-8",
                    base_shape_id: "$string",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-10",
                    base_shape_id: "$oneOf",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-13",
                    base_shape_id: "$list",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-13",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-7",
                                },
                            ),
                            consuming_parameter_id: "$listItem",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-11",
                    shape_id: "test-id-10",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-10",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-13",
                                },
                            ),
                            consuming_parameter_id: "test-id-11",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-14",
                    base_shape_id: "$object",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddField(
                AddField {
                    field_id: "test-id-9",
                    shape_id: "test-id-14",
                    name: "a-field",
                    shape_descriptor: FieldShapeFromShape(
                        FieldShapeFromShape {
                            field_id: "test-id-9",
                            shape_id: "test-id-8",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-12",
                    shape_id: "test-id-10",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-10",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-14",
                                },
                            ),
                            consuming_parameter_id: "test-id-12",
                        },
                    ),
                },
            ),
        ),
    ],
)
