workspaces/diff-engine/src/learn_shape/snapshots/optic_diff_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_one_off_polymorphic_bodies__primitive_results.snap
---
source: workspaces/diff-engine/src/learn_shape/result.rs
expression: "&primitive_results"
---
(
    Some(
        "test-id-0",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-0",
                    base_shape_id: "$oneOf",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-4",
                    base_shape_id: "$string",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-1",
                    shape_id: "test-id-0",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-0",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-4",
                                },
                            ),
                            consuming_parameter_id: "test-id-1",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-5",
                    base_shape_id: "$number",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-2",
                    shape_id: "test-id-0",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-0",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-5",
                                },
                            ),
                            consuming_parameter_id: "test-id-2",
                        },
                    ),
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-6",
                    base_shape_id: "$boolean",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShapeParameter(
                AddShapeParameter {
                    shape_parameter_id: "test-id-3",
                    shape_id: "test-id-0",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-0",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-6",
                                },
                            ),
                            consuming_parameter_id: "test-id-3",
                        },
                    ),
                },
            ),
        ),
    ],
    Some(
        "test-id-0",
    ),
)
